--- a/views/admin/proDetail.ejs
+++ b/views/admin/proDetail.ejs
@@ -159,8 +159,8 @@
                                         <p class="text-muted"><%= product.description %></p>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <p><strong>Regular Price:</strong> <%= product.regularPrice %></p>
-                                                <p><strong>Offer Price:</strong> <%= product.salePrice %></p>
+                                                <p><strong>Regular Price: ₹</strong> <%= product.regularPrice %></p>
+                                                <p><strong>Offer Price: ₹</strong> <%= product.salePrice %></p>
                                                 <p><strong>Stock:</strong> <%= product.quantity %></p>
                                             </div>
                                             <div class="col-md-6">
