--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -163,11 +163,12 @@
         <header class="card-header">
             <div class="row align-items-center col-md-6">
               
-                <div class="col-md-2 col-6">
+                <!-- <div class="col-md-2 col-6">
                     <input type="date" class="form-control">
-                </div>
-                <div class="col-md-2 col-6">
+                </div> -->
+                <div class="col-md-4 col-6">
                     <div class="custom_select">
+                        <p>Filter by:</p>
                         <select id="filterSelect" class="form-select " >
                             <option selected>All</option>
                             <option>Day</option>
