--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -139,6 +139,9 @@
 <script src="assets/userAssets/js/plugins/wow.js"></script>
 <script src="assets/userAssets/js/plugins/ajax-mail.js"></script>
 <script src="assets/userAssets/js/main.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
 
 
 
