--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -38,83 +38,74 @@
                         <a href="#shop-2" data-bs-toggle="tab"><i class="dlicon design_bullet-list-69"></i><p>List </p></a>
                         
                     </div>
-                    <!-- <div class="shop-filter ml-50">
+                    <div class="shop-filter ml-50">
                         <a class="shop-filter-active" href="#">Filters <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></a>
-                    </div> -->
+                    </div>
                     <div class="shop-short-by ml-50">
                         <span>Sort by <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></span>
                         <ul>
-                            <li class="active"><a href="/allProductSort?sort=Default">Default sorting</a></li> 
-                            <li><a href="/allProductSort?sort=Latest"> latest</a></li>
-                            <li><a href="/allProductSort?sort=ZtoA"> A to Z</a></li>
-                            <li><a href="/allProductSort?sort=AtoZ"> Z to A</a></li>
-                            <li><a href="/allProductSort?sort=Lowtohigh"> price: Low to high</a></li>
-                            <li><a href="/allProductSort?sort=Hightolow"> price: High to low</a></li>
+                            <li class="active"><a href="/allProducts?sort=Default">Default sorting</a></li> 
+                            <li><a href="/allProducts?sort=Latest"> latest</a></li>
+                            <li><a href="/allProducts?sort=ZtoA"> A to Z</a></li>
+                            <li><a href="/allProducts?sort=AtoZ"> Z to A</a></li>
+                            <li><a href="/allProducts?sort=Lowtohigh"> price: Low to high</a></li>
+                            <li><a href="/allProducts?sort=Hightolow"> price: High to low</a></li>
                             <li><a href="#"> Rating</a></li> 
                         </ul>
                     </div>
                 </div>
             </div>
-            <!-- <div class="product-filter-wrapper">
+
+
+
+            <div class="product-filter-wrapper">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
                             <h5>Price</h5>
                             <div class="price-filter">
                                 <ul>
-                                    <li><a href="#">₹0.00 - ₹20.00</a></li>
-                                    <li><a href="#">₹20.00 - ₹40.00</a></li>
-                                    <li><a href="#">₹30.00 - ₹50.00</a></li>
+                                    <li><a href="#" onclick="filterProducts('price', '100-1000')">₹100.00 - ₹1000.00</a></li>
+                                    <li><a href="#" onclick="filterProducts('price', '1000-5000')">₹1000.00 - ₹5000.00</a></li>
+                                    <li><a href="#" onclick="filterProducts('price', '5000-10000')">₹5000.00 - ₹10,000.00</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
-                            <h5>Size</h5>
+                            <h5>Category</h5>
                             <div class="product-size">
                                 <ul>
-                                    <li><a href="#">Full Size</a></li>
-                                    <li><a href="#">L</a></li>
-                                    <li><a href="#">M</a></li>
-                                    <li><a href="#">S</a></li>
-                                    <li><a href="#">XL</a></li>
-                                    <li><a href="#">XXL</a></li>
+                                    <% catData.forEach(element => { %>
+                                         <li><a href="#" onclick="filterProducts('category', '<%= element.name %>')"> <%= element.name  %></a></li>
+                                    <% }); %>
+                                   
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
-                        <div class="product-filter">
-                            <h5>Color</h5>
-                            <div class="product-color">
-                                <ul>
-                                    <li><a href="#">Blue</a></li>
-                                    <li><a href="#">Brown</a></li>
-                                    <li><a href="#">Green</a></li>
-                                    <li><a href="#"> Pink</a></li>
-                                    <li><a href="#">Violet</a></li>
-                                    <li><a href="#"> White</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
                             <h5>Brands</h5>
                             <div class="product-brands">
                                 <ul>
-                                    <li><a href="#">Airi</a></li>
-                                    <li><a href="#">Draven</a></li>
-                                    <li><a href="#">Mango</a></li>
-                                    <li><a href="#"> Valentino</a></li>
-                                    <li><a href="#">Zara </a></li>
+                                    <% brandData.forEach(element => { %>
+                                         <li><a href="#" onclick="filterProducts('brand', '<%= element.brandName %>')"> <%= element.brandName  %></a></li>
+                                    <% }); %>
+                                   
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
+
+
+
+
+
             <div class="tab-content jump-3 pt-30">
                 <div id="shop-1" class="tab-pane active">
                     <div class="row">
@@ -214,69 +205,62 @@
                     <% } %>
                 </div>
               
+
+
+                <div class="pagination-wrap mt-50">
+                    <ul class="pagination">
+                        <% if (currentPage > 1) { %>
+                            <li><a href="?page=1">First</a></li>
+                            <li><a href="?page=<%= currentPage - 1 %>"><i class="fa fa-chevron-left"></i></a></li>
+                        <% } %>
+                        
+                        <% for (let i = 1; i <= totalPages; i++) { %>
+                            <li class="<%= i === currentPage ? 'active' : '' %>">
+                                <a href="?page=<%= i %>"><%= i %></a>
+                            </li>
+                        <% } %>
+                
+                        <% if (currentPage < totalPages) { %>
+                            <li><a href="?page=<%= currentPage + 1 %>"><i class="fa fa-chevron-right"></i></a></li>
+                            <li><a href="?page=<%= totalPages %>">Last</a></li>
+                        <% } %>
+                    </ul>
+                </div>
+
+                
+
+
             </div>
         </div>
     </div>
 
+<style>
+    .pagination-wrap {
+    text-align: center;
+}
 
-<!--     
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+.pagination {
+    display: inline-block;
+    padding-left: 0;
+    margin: 0;
+}
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
-             
-             function addToCart(){
-                
-                console.log("addToCart Ajax is working")
-                const prodQuantity = 1
-                const productId = document.getElementById("proId").value
-                //AJAX request
-                $.ajax({
-                        url: "/addToCart",
-                        method: "post",
-                        data: {
-                            prodQuantity,
-                            productId,
-                            
-                        },
-                        success: (response) => {
-                if (response.status === "success") {
-                    Swal.fire({
-                        icon: "success",
-                        title: "Product added to cart",
-                        showConfirmButton: false,
-                        timer: 2000,
-                    }).then((result) => {
-                        document.getElementById("addToCartButton").innerText = "View Cart ";
-                        window.location.href = "/productCart";
-                    });
-                } else if (response.status === "alreadyInCart") {
-                    Swal.fire({
-                        icon: "info",
-                        title: "Product already in cart",
-                        showConfirmButton: false,
-                        timer: 2000,
-                    });
-                } else if (response.status === "login") {
-                    Swal.fire({
-                        text: "You want to login the page?!",
-                        icon: "warning",
-                        showCancelButton: true,
-                        confirmButtonColor: "#3085d6",
-                        cancelButtonColor: "#d33",
-                        confirmButtonText: "Go to login!"
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            window.location.href = "/login";
-                        }
-                    });
-                }
-                }
+.pagination li {
+    display: inline;
+}
 
-                })
-                }
+.pagination li a {
+    color: #333;
+    padding: 5px 10px;
+    text-decoration: none;
+}
 
+.pagination li.active a {
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 3px;
+}
 
+</style>
 
-</script> -->
 <%- include("../partials/footer.ejs") %>
