--- a/views/admin/couponPage.ejs
+++ b/views/admin/couponPage.ejs
@@ -16,14 +16,14 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item active"> 
-                    <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
+                <li class="menu-item "> 
+                    <a class="menu-link " href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
 
                 <li class="menu-item"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                         <span class="text">Sales Report</span>
                     </a>
                 </li>
@@ -63,10 +63,14 @@
                     </a>
                 </li>
 
-                <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                <li class="menu-item has-submenu">
+                    <a class="menu-link" > <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
+                    <div class="submenu">
+                        <a href="/admin/prodOfferPage">Product Offer</a>
+                        <a href="/admin/catOfferPage">Category Offer</a>
+                    </div>
                 </li>
                
                 
