--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -21,7 +21,7 @@
                 </li>
 
                 <li class="menu-item"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                         <span class="text">Sales Report</span>
                     </a>
                 </li>
@@ -62,7 +62,7 @@
                 </li>
 
                 <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <a class="menu-link" href="/admin/offersPage"> <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
                 </li>
@@ -131,16 +131,9 @@
                 <div class="col-lg-2 col-md-3 col-6">
                     <select class="form-select">
                         <option>Status</option>
-                        <option>Active</option>
-                        <option>Disabled</option>
-                        <option>Show all</option>
-                    </select>
-                </div>
-                <div class="col-lg-2 col-md-3 col-6">
-                    <select class="form-select">
-                        <option>Show 20</option>
-                        <option>Show 30</option>
-                        <option>Show 40</option>
+                        <option id="active">Active</option>
+                        <option id="disabled">Disabled</option>
+                        <option id="showall">Show all</option>
                     </select>
                 </div>
             </div>
