--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -60,11 +60,14 @@
                         <span class="text">Coupon</span>
                     </a>
                 </li>
-
-                <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                <li class="menu-item has-submenu">
+                    <a class="menu-link" > <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
+                    <div class="submenu">
+                        <a href="/admin/prodOfferPage">Product Offer</a>
+                        <a href="/admin/catOfferPage">Category Offer</a>
+                    </div>
                 </li>
                
                 
@@ -165,74 +168,57 @@
                 </article>
             </div>
         </div>
-        <!-- <div class="col-lg-3">
+        <div class="col-lg-3">
             <div class="card card-body mb-4">
                 <article class="icontext">
                     <span class="icon icon-sm rounded-circle bg-info-light"><i class="text-info material-icons md-shopping_basket"></i></span>
                     <div class="text">
-                        <h6 class="mb-1 card-title">Monthly Earning</h6> <span>₹ </span>
+                        <h6 class="mb-1 card-title">Users</h6> <span><%=userData.length  %></span>
                         <span class="text-sm">
-                            Based in your local time.
+                            All active customers
                         </span>
                     </div>
                 </article>
             </div>
-        </div> -->
+        </div>
     </div>
     <div class="row">
         <div class="col-xl-8 col-lg-12">
-            <div class="card mb-4">
-                <article class="card-body">
-                    <h5 class="card-title">Sale statistics</h5>
-                    <canvas id="myChart" height="120px"></canvas>
-                </article>
-            </div>
-            <div class="row">
-                <div class="col-lg-5">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-xl-12 col-lg-12">
                     <div class="card mb-4">
                         <article class="card-body">
-                            <h5 class="card-title">New Members</h5>
-                            <div class="new-member-list">
-                                <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <div class="d-flex align-items-center">
-                                        <img src="assets/imgs/people/avatar4.jpg" alt="" class="avatar">
-                                        <div>
-                                            <h6>Patric Adams</h6>
-                                            <p class="text-muted font-xs">
-                                                Sanfrancisco
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <a href="#" class="btn btn-xs"><i class="material-icons md-add"></i> Add</a>
-                                </div>
-                                <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <div class="d-flex align-items-center">
-                                        <img src="assets/imgs/people/avatar2.jpg" alt="" class="avatar">
-                                        <div>
-                                            <h6>Dilan Specter</h6>
-                                            <p class="text-muted font-xs">
-                                                Sanfrancisco
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <a href="#" class="btn btn-xs"><i class="material-icons md-add"></i> Add</a>
-                                </div>
-                                <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <div class="d-flex align-items-center">
-                                        <img src="assets/imgs/people/avatar3.jpg" alt="" class="avatar">
-                                        <div>
-                                            <h6>Tomas Baker</h6>
-                                            <p class="text-muted font-xs">
-                                                Sanfrancisco
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <a href="#" class="btn btn-xs"><i class="material-icons md-add"></i> Add</a>
+                            <div class="d-flex justify-content-between">
+                                <h5 class="card-title" style="text-align: center;">Product and user statistics</h5>
+                                <div class="d-flex" style="gap: 50px;">
+                                    <li style="color: rgb(255, 44, 79);">User</li>
+                                    <li style="color:rgb(41, 251, 72);">Order</li>
                                 </div>
                             </div>
+                            <canvas id="linechart" height="120px"></canvas>
                         </article>
                     </div>
                 </div>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <!-- <div class="col-lg-5">
+                    <div class="card mb-4">
+                        <article class="card-body">
+                            <h5 class="card-title" style="text-align: center;">Product counts based on category sales</h5>
+                            <canvas id="samplechart" style="width:100%; max-width:700px; height: 300px;"></canvas>
+                        </article>
+                    </div>
+                </div> -->
+                <div class="col-lg-7">
+                    <div class="card mb-4">
+                        <article class="card-body">
+                            <h5 class="card-title" style="text-align: center;">Monthly Revenue Statistics</h5>
+                            <canvas id="sample2chart" style="width:100%; max-width:700px; height: 300px;"></canvas>
+                        </article>
+                    </div>
+                </div>
+            </div>
+       <!-- <div class="row">
                 <div class="col-md-2 col-6">
                     <input type="date" value="02.05.2022" class="form-control">
                 </div>
@@ -247,9 +233,9 @@
                         </select>
                     </div>
                 </div>
-            </div>
-        </header>
-        <div class="card-body">
+            </div> -->
+        <!-- </header> -->
+        <!-- <div class="card-body">
             <div class="table-responsive">
                 <div class="table-responsive">
                     <table class="table align-middle table-nowrap mb-0">
@@ -310,9 +296,9 @@
                         </article>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-xl-4 col-lg-12">
+            </div> 
+        </div>-->
+        <!-- <div class="col-xl-4 col-lg-12">
             <div class="card mb-4">
                 <article class="card-body">
                     <h5 class="card-title">Revenue Base on Area</h5>
@@ -344,11 +330,108 @@
                     </div>
                 </article>
             </div>
-        </div>
+        </div> -->
     </div>     
   
   
 </section> <!-- content-main end// -->
+<script src="/admin-assets/js/vendors/chart.js"></script>
+<script src="/admin-assets/js/main.js" type="text/javascript"></script>
+<script src="/admin-assets/js/custom-chart.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"> </script>
+
+<script>
+ const x2Values = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+    const revenewDayaArray = '<%= JSON.stringify(revenewDayaArray) %>';
+    const revenewDayaArrayResult = JSON.parse(revenewDayaArray);
+
+    // Create a pie chart
+    new Chart("sample2chart", {
+        type: "bar",
+        data: {
+            labels: x2Values,
+            datasets: [{
+                backgroundColor: "rgb(65, 65, 255)",
+                data: revenewDayaArrayResult,
+            }]
+        },
+        options: {
+            legend: { display: false },
+            elements: {
+                line: {
+                    tension: 0
+                }
+            },
+        }
+    });
+
+    const xlinevalue = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+    const userDayData = '<%= JSON.stringify(UserdayArray) %>';
+    const userDayDataResult = JSON.parse(userDayData);
+    const orderdayArray = '<%= JSON.stringify(orderdayArray) %>';
+    const orderdayArrayResult = JSON.parse(orderdayArray);
+
+    new Chart("linechart", {
+        type: "line",
+        data: {
+            labels: xlinevalue,
+            datasets: [{
+                data: orderdayArrayResult,
+                borderColor: "rgb(41, 251, 72)",
+                fill: false,
+            }, {
+                data: userDayDataResult,
+                borderColor: "rgb(255, 44, 79)",
+                fill: false,
+            }]
+        },
+        options: {
+            legend: { display: false },
+            elements: {
+                line: {
+                    tension: 0
+                }
+            },
+        }
+    });
+
+    window.addEventListener("load" , ()=> {
+        $.ajax({
+            url: "/admin/catChart",
+            method: "get",
+            success: (response) => {
+                if (response.status === "true") {
+                    catNames = response.catNames;
+                    chartColores = response.chartColores;
+                    cartQtyArray = response.cartQtyArray;
+                    // Sample data for the chart
+                    const xValues = catNames;
+                    const yValues = cartQtyArray;
+                    const barColors = chartColores;
+
+                    new Chart("samplechart", {
+                        type: 'doughnut',
+                        data: {
+                            labels: xValues,
+                            datasets: [{
+                                backgroundColor: barColors,
+                                data: yValues
+                            }]
+                        },
+                        options: {
+                            title: {
+                                display: true,
+                            }
+                        }
+                    });
+                }
+            }
+        })
+    });
+
+
+
+</script>
 
 
         <%- include("../partials/adminFooter.ejs") %>
