--- a/views/admin/couponAdd.ejs
+++ b/views/admin/couponAdd.ejs
@@ -34,7 +34,7 @@
                     </li>
     
                     <li class="menu-item"> 
-                        <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                        <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                             <span class="text">Sales Report</span>
                         </a>
                     </li>
@@ -74,10 +74,14 @@
                         </a>
                     </li>
     
-                    <li class="menu-item "> 
-                        <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <li class="menu-item has-submenu">
+                        <a class="menu-link" > <i class="icon material-icons md-redeem"></i>
                             <span class="text">Offers</span>
                         </a>
+                        <div class="submenu">
+                            <a href="/admin/prodOfferPage">Product Offer</a>
+                            <a href="/admin/catOfferPage">Category Offer</a>
+                        </div>
                     </li>
                    
                    
