--- a/views/admin/orderDetailEdit.ejs
+++ b/views/admin/orderDetailEdit.ejs
@@ -21,7 +21,7 @@
                 </li>
 
                 <li class="menu-item"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                         <span class="text">Sales Report</span>
                     </a>
                 </li>
@@ -62,7 +62,7 @@
                 </li>
 
                 <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <a class="menu-link" href="/admin/offersPage"> <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
                 </li>
