--- a/views/admin/productAdd.ejs
+++ b/views/admin/productAdd.ejs
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="menu-item"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                         <span class="text">Sales Report</span>
                     </a>
                 </li>
@@ -74,7 +74,7 @@
                 </li>
 
                 <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <a class="menu-link" href="/admin/offersPage"> <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
                 </li>
@@ -400,8 +400,8 @@
         const imageError = document.getElementById("images-error");
         // Validation logic for images
 
-            if (selectImages.length !== 3) {
-                imageError.innerHTML = "Images must need exactly 3 images";
+            if (selectImages.length !== 5) {
+                imageError.innerHTML = "Images must need exactly 5 images";
                 return false;
             }
             imageError.innerHTML = "";
