--- a/views/admin/productBrand.ejs
+++ b/views/admin/productBrand.ejs
@@ -1,7 +1,6 @@
-
 <%- include("../partials/adminHeader.ejs") %>
 
-
+  
 <body class="dark">
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
@@ -15,14 +14,14 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item active"> 
-                    <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
+                <li class="menu-item "> 
+                    <a class="menu-link " href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
 
                 <li class="menu-item"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                         <span class="text">Sales Report</span>
                     </a>
                 </li>
@@ -44,14 +43,14 @@
                     </a>
                 </li>
 
-                <li class="menu-item active">
+                <li class="menu-item active ">
                     <a class="menu-link active" href="/admin/brand"> <i class="icon material-icons md-label"></i>
                         <span class="text">Brand</span>
                     </a>
                 </li>
                 
-                <li class="menu-item">
-                    <a class="menu-link" href="/admin/category"> <i class="icon material-icons md-category"></i>
+                <li class="menu-item ">
+                    <a class="menu-link " href="/admin/category"> <i class="icon material-icons md-category"></i>
                         <span class="text">Category</span>
                     </a>
                 </li>
@@ -63,7 +62,7 @@
                 </li>
 
                 <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <a class="menu-link" href="/admin/offersPage"> <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
                 </li>
