--- a/views/admin/productEdit.ejs
+++ b/views/admin/productEdit.ejs
@@ -26,14 +26,14 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item active"> 
-                    <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
+                <li class="menu-item "> 
+                    <a class="menu-link " href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
 
                 <li class="menu-item"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-show_chart"></i>
+                    <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-show_chart"></i>
                         <span class="text">Sales Report</span>
                     </a>
                 </li>
@@ -74,7 +74,7 @@
                 </li>
 
                 <li class="menu-item "> 
-                    <a class="menu-link" href="/admin/couponPage"> <i class="icon material-icons md-redeem"></i>
+                    <a class="menu-link" href="/admin/offersPage"> <i class="icon material-icons md-redeem"></i>
                         <span class="text">Offers</span>
                     </a>
                 </li>
