change compass to atlas

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -341,31 +341,31 @@
 
                                     <div class="sin-login-register">
                                         <label for="typeNameX">Name <span>*</span></label>
-                                        <input id="typeNameX"  type="text" name="name" value="Susmitha S">
+                                        <input id="typeNameX"  type="text" name="name">
                                     </div>
                                     <p><div id="error1" style="display:none;" class="alert alert-danger err"></div></p>
                                     
                                     <div class="sin-login-register">
                                         <label for="typeEmailX">Email address <span>*</span></label>
-                                        <input id="typeEmailX"  type="text" name="email"  value="susmitha0313@gmail.com" placeholder="emample@gmail.com">
+                                        <input id="typeEmailX"  type="text" name="email"  placeholder="emample@gmail.com">
                                     </div>
                                     <p><div id="error2" style="display: none;" class="alert alert-danger err"></div></p>
 
                                     <div class="sin-login-register">
                                         <label for="typeMobileX">Phone number <span>*</span></label>
-                                        <input id="typeMobileX"  type="tel" name="phone" value="9645338880">
+                                        <input id="typeMobileX"  type="tel" name="phone" >
                                     </div>
                                     <p><div id="error3" style="display: none;" class="alert alert-danger err"></div></p>
                             
                                     <div class="sin-login-register">
                                         <label for="typePasswordX">Password <span>*</span></label>
-                                        <input id="typePasswordX"  type="password" name="password" value="Susmitha@123">
+                                        <input id="typePasswordX"  type="password" name="password" >
                                     </div>
                                     <p><div id="error4" style="display: none;" class="alert alert-danger err"></div></p>
                                   
                                     <div class="sin-login-register">
                                         <label for="typeRepasswordX">Rewrite Password<span>*</span></label>
-                                        <input  id="typeRepasswordX" type="password" name="repassword" value="Susmitha@123">
+                                        <input  id="typeRepasswordX" type="password" name="repassword">
                                     </div>
                                     <p><div id="error5" style="display: none;" class="alert alert-danger err"></div></p>
                              
