--- a/views/admin/productCategory.ejs
+++ b/views/admin/productCategory.ejs
@@ -80,7 +80,7 @@
     <main class="main-wrap">
         <header class="main-header navbar">
             <div class="col-search">
-                <form class="searchform">
+                <!-- <form class="searchform">
                     <div class="input-group">
                         <input list="search_terms" type="text" class="form-control" placeholder="Search term">
                         <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
@@ -91,7 +91,7 @@
                         <option value="Apple iphone">
                         <option value="Ahmed Hassan">
                     </datalist>
-                </form>
+                </form> -->
             </div>
             <div class="col-nav">
                 <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
@@ -131,8 +131,6 @@
         <div class="card-body">      
             <div class="row">
                 <div class="col-md-3">
-
-
                     <form id="createCat" action="/admin/category" method="post">
                         <div class="mb-4">
                                <p class="form-label"><h6>Add New Category</h6></p>
