took out filter and admin link added

--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -38,9 +38,9 @@
                         <a href="#shop-2" data-bs-toggle="tab"><i class="dlicon design_bullet-list-69"></i><p>List </p></a>
                         
                     </div>
-                    <div class="shop-filter ml-50">
+                    <!-- <div class="shop-filter ml-50">
                         <a class="shop-filter-active" href="#">Filters <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></a>
-                    </div>
+                    </div> -->
                     <div class="shop-short-by ml-50">
                         <span>Sort by <i class="fa fa-angle-down angle-down"></i> <i class="fa fa-angle-up angle-up"></i></span>
                         <ul>
@@ -58,7 +58,7 @@
 
 
 
-            <div class="product-filter-wrapper">
+            <!-- <div class="product-filter-wrapper">
                 <div class="row">
                     <div class="col-md-3 col-sm-6 col-xs-12 mb-20">
                         <div class="product-filter">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
 
