--- a/views/user/userOrders.ejs
+++ b/views/user/userOrders.ejs
@@ -68,7 +68,7 @@
                                                                 <td style="color:rgb(177, 0, 0);"><%= order.status %></td>
                                                                 <% } %>
 
-                                                                <td>$<%= order.totalAmount %></td>
+                                                                <td>₹<%= order.totalAmount %></td>
                                                                 <td><a href="/viewOrder?id=<%= order._id %>" class="check-btn sqr-btn ">View</a></td>
                                                             </tr>
                                                         <% }) %>
