--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -48,17 +48,17 @@
 
                 <div class="mb-3">
                     <label class="form-label" for="emailAdmin">Email <span>*</span></label>
-                    <input class="form-control" id="emailAdmin" name="emailA" placeholder="Your email" type="text">
+                    <input class="form-control" id="emailAdmin" name="emailA" placeholder="Your email" value="szuccibag@gmail.com" type="text">
                 </div> <!-- form-group// -->
                 <p><div id="error2" style="display: none;" class="alert alert-danger err"></div></p>
 
 
                 <div class="mb-3">
                     <label class="form-label" for="passAdmin">Password <span>*</span></label>
-                    <input class="form-control" id="passAdmin" name=passwordA placeholder="Password" type="password">
+                    <input class="form-control" id="passAdmin" value="Szuccibag@123" name=passwordA placeholder="Password" type="password">
                 </div> <!-- form-group// -->
                 <p><div id="error4" style="display: none;" class="alert alert-danger err"></div></p>
-
+    
 
                 <div class="mb-4">
                     <button type="submit" class="btn btn-primary w-100"> Login </button>
