--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -380,6 +380,10 @@
                                 <p>Already have an account? <a href="/login">Login here</a>
                                 </p>
                               </div>
+                            <div>
+                                <p>Are you Szucci Bags Admin? <a href="/admin/adminlogin">Admin Login here</a>
+                                </p>
+                              </div>
                         </div>
                     </div>
                 </div>
