user Id and pswd value

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -351,7 +351,7 @@
 
                                                     <div class="sin-login-register">
                                                         <label for="typeEmailX">email address <span>*</span></label>
-                                                        <input type="email" name="email" id="typeEmailX">
+                                                        <input type="email" name="email" value="susmitha0313@gmail.com" id="typeEmailX">
                                                     </div>
                                                     <p>
                                                     <div id="error2" style="display: none;"
@@ -360,7 +360,7 @@
 
                                                     <div class="sin-login-register">
                                                         <label for="typePasswordX">Password <span>*</span></label>
-                                                        <input type="password" name="password" id="typePasswordX">
+                                                        <input type="password" value="Susmitha@123" name="password" id="typePasswordX">
                                                     </div>
                                                     <p>
                                                     <div id="error4" style="display: none;"
