--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -347,7 +347,7 @@
                                     
                                     <div class="sin-login-register">
                                         <label for="typeEmailX">Email address <span>*</span></label>
-                                        <input id="typeEmailX"  type="text" name="email"  placeholder="emample@gmail.com">
+                                        <input id="typeEmailX"  type="text" name="email" >
                                     </div>
                                     <p><div id="error2" style="display: none;" class="alert alert-danger err"></div></p>
 
